implement trigger and handler, expand custom mdt

--- a/force-app/main/default/classes/Logger.cls
+++ b/force-app/main/default/classes/Logger.cls
@@ -1,54 +1,25 @@
 public with sharing class Logger {
 
-    private static final Logger_Setting__mdt GLOBAL_SETTING = LoggerUtil.getLoggerConfiguration();
-
     public class LogParameter {
         
-        @InvocableVariable(label = 'Content' description = 'Informative message content of the log' required = true)
-        public String content;
-
-        @InvocableVariable(label = 'Source' description = 'Name of the Flow or Process Builder that creates the log' required = true)
-        public String source;
-
-        @InvocableVariable(label = 'Type' description='Type of log being created [\'Exception Log\', \'Execution Log\', \'Debug Log\']' required = true)
-        public String type;
-
-        @InvocableVariable(label = 'Override: Insert Record' description='Determines if a log record get inserted (Overrides the Insert_Log_Records setting defined in the Logger_Setting custom MDT)')
-        public Boolean insertRecord;
-
-        @InvocableVariable(label = 'Override: Send Email' description='Determines if an email message is sent to addresses defined in the Administrator__c custom setting (Overrides the Send_Log_Emails setting defined in the Logger Setting custom MDT)')
-        public Boolean sendEmail;
+        @InvocableVariable(label = 'Message' description = 'Informative message content of the log' required = true)
+        public String message;
         
-        public LogParameter() {}
+        @InvocableVariable(label = 'Log Type' description='Type of the log record being created [\'Execution_Log\', \'Error_Log\', \'Debug_Log\', \'Warning_Log\']' required = true)
+        public String logType;
+
+        @InvocableVariable(label = 'Source Name' description = 'Name of the Flow or Process Builder that creates the log')
+        public String sourceName;
         
-        public LogParameter(String content, String source, String type, Boolean insertRecord, Boolean sendEmail) {
-            this.content = content;
-            this.source = source;
-            this.type = type;
-            this.insertRecord = insertRecord;
-            this.sendEmail = sendEmail;
-        }
     }
 
-    @InvocableMethod(label='Log' description='Creates a log that is inserted as a record and/or sent as an email depending on the pe.')
+    @InvocableMethod(label='Log' description='Creates a log that is inserted as a record')
     public static void log(List<LogParameter> logParameterList) {
 
         List<Log__c> logsToInsert = new List<Log__c>();
-        List<Messaging.SingleEmailMessage> emailList = new List<Messaging.SingleEmailMessage>();
-        List<String> addressList = LoggerUtil.getAddressList();
-        
-        for (LogParameter logParameter : logParameterList) { 
-            if (logParameter.sendEmail != null && logParameter.sendEmail || GLOBAL_SETTING.Send_Log_Emails__c) {
-                emailList.add(LoggerUtil.createEmail(logParameter, addressList));
-            }
 
-            if (logParameter.insertRecord != null && logParameter.insertRecord || GLOBAL_SETTING.Insert_Log_Records__c) {
-                logsToInsert.add(LoggerUtil.createLog(logParameter));
-            }
-        }
-        
-        if (!emailList.isEmpty()) {
-            Messaging.sendEmail(emailList);
+        for (LogParameter logParameter : logParameterList) {
+            logsToInsert.add(LoggerUtil.createLog(logParameter));
         }
 
         if (!logsToInsert.isEmpty()) {
@@ -56,12 +27,29 @@ public with sharing class Logger {
         }
     }
 
-    public static void logException(Exception e) {
-        Log__c log = LoggerUtil.log(new List<LogParameter>{new LogParameter()});
-        log.RecordTypeId = Schema.getGlobalDescribe().get(LoggerConstants.RECORD_TYPE_LABEL_EXCEPTION_LOG).getDescribe().getRecordTypeInfosByName().get(LoggerConstants.RECORD_TYPE_LABEL_EXCEPTION_LOG).getRecordTypeId();
-        log.Stack_Trace__c = e.getStackTraceString();
-        log.Line_Number__c = e.getLineNumber();
-        insert log;
+    public static void error(String message) {
+        System.debug(LoggingLevel.ERROR, message);
     }
 
+    public static void warn(String message) {
+        System.debug(LoggingLevel.WARN, message);
+    }
+
+    public static void info(String message) {
+        System.debug(LoggingLevel.INFO, message);
+    }
+
+    public static void debug(String message) {
+        System.debug(LoggingLevel.DEBUG, message);
+    }
+    
+    public static void logException(Exception e) {
+        Log__c log = new Log__c();
+        log.recordTypeId = Schema.getGlobalDescribe().get(LoggerConstants.OBJECT_LOG).getDescribe().getRecordTypeInfosByDeveloperName().get(LoggerConstants.RECORD_TYPE_DEVELOPER_NAME_ERROR_LOG).getRecordTypeId();
+        log.Stack_Trace__c = e.getStackTraceString();
+        log.Line_Number__c = e.getLineNumber();
+        log.Exception_Message__c = e.getMessage();
+        log.Exception_Type__c = e.getTypeName();
+        insert log;
+    }
 }
