--- a/force-app/main/default/classes/LoggerConstants.cls
+++ b/force-app/main/default/classes/LoggerConstants.cls
@@ -4,9 +4,10 @@ public with sharing class LoggerConstants {
 
     public static final String CUSTOM_SETTING_ADMINISTRATOR = 'Administrator__c';
     public static final String CUSTOM_METADATA_TYPE_LOGGER_SETTINGS = 'Logger_Settings__mdt';
-    public static final String GLOBAL_SETTING = 'Global_Setting';
+    public static final String CUSTOM_METADATA_TYPE_RECORD_LOGGER_SETTING = 'Logger_Setting';
 
-    public static final String RECORD_TYPE_LABEL_DEBUG_LOG = 'Debug Log';
-    public static final String RECORD_TYPE_LABEL_EXECUTION_LOG = 'Execution Log';
-    public static final String RECORD_TYPE_LABEL_EXCEPTION_LOG = 'Exception Log';
+    public static final String RECORD_TYPE_DEVELOPER_NAME_ERROR_LOG = 'Error_Log';
+    public static final String RECORD_TYPE_DEVELOPER_NAME_EXECUTION_LOG = 'Execution_Log';
+    public static final String RECORD_TYPE_DEVELOPER_NAME_WARNING_LOG = 'Warning_Log';
+    public static final String RECORD_TYPE_DEVELOPER_NAME_DEBUG_LOG = 'Debug_Log';
 }
